# ai-for-robotics

./: Lesson 1.py  Lesson 4.py  Lesson 8.py  Lesson 9.py  Lesson12.py  Lesson12_Astar.py  Lesson12_DynamicProgramming.py  Lesson12_Policy  Lesson13.py  Lesson15_PID.py  Lesson15_smooth.py  Lesson16_ConstrainedSmoothing.py  Lesson16_RaceTrack.py  Lesson16_Smooth.py  Lesson4.py  Lesson5.py  README.md  grader.py  pyproject.toml  test.py
